[gd_scene load_steps=5 format=3 uid="uid://b8q744xg6p65m"]

[ext_resource type="Script" path="res://src/MatConfig.gd" id="1_wialq"]
[ext_resource type="Script" path="res://src/SpinboxFix.gd" id="2_rd45n"]
[ext_resource type="PackedScene" uid="uid://gr3yxfiqnx56" path="res://src/CubePreview.tscn" id="2_wwgxm"]

[sub_resource type="GDScript" id="1"]
script/source = "extends RichTextLabel

func _ready():
    connect(\"meta_clicked\", Callable(self, \"open\"))
func open(meta):
    var s = str(meta)
    if s.begins_with(\"https://\"):
        OS.shell_open(s)
"

[node name="MatConfig" type="Control" groups=["MatConfig"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wialq")

[node name="ClickBlocker" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.752941)

[node name="UI" type="HSplitContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_right = -13.0
dragger_visibility = 2

[node name="Images" type="VBoxContainer" parent="UI"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="UI/Images"]
layout_mode = 2
text = "
Material Editor
"

[node name="SideL" type="Label" parent="UI/Images"]
layout_mode = 2
text = "Side:"

[node name="SideI" type="TextureRect" parent="UI/Images"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TopL" type="Label" parent="UI/Images"]
layout_mode = 2
text = "Top: (none)"

[node name="TopI" type="TextureRect" parent="UI/Images"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Richie" type="RichTextLabel" parent="UI/Images"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "Please drag and drop another image to add the \"Top\" texture. You can swap the Side and Top afterwards.

Images for 12x4 and 4x4 mode should be autotile tilesheets with no spacing or padding. Try:
[url]https://wareya.github.io/webtyler/[/url]"
fit_content = true
script = SubResource("1")

[node name="TilingMode" type="OptionButton" parent="UI/Images"]
layout_mode = 2

[node name="Transparent" type="OptionButton" parent="UI/Images"]
layout_mode = 2

[node name="TransparentMode" type="OptionButton" parent="UI/Images"]
layout_mode = 2

[node name="Swap" type="Button" parent="UI/Images"]
layout_mode = 2
text = "Swap"

[node name="Done" type="Button" parent="UI/Images"]
layout_mode = 2
text = "Done"

[node name="GridContainer" type="GridContainer" parent="UI/Images"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="UI/Images/GridContainer"]
layout_mode = 2
text = "Tileset Subdivide X:"

[node name="SubdivideX" type="SpinBox" parent="UI/Images/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 64.0
value = 1.0
script = ExtResource("2_rd45n")

[node name="Label2" type="Label" parent="UI/Images/GridContainer"]
layout_mode = 2
text = "Tileset Subdivide Y:"

[node name="SubdivideY" type="SpinBox" parent="UI/Images/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 64.0
value = 1.0
script = ExtResource("2_rd45n")

[node name="Label3" type="Label" parent="UI/Images/GridContainer"]
layout_mode = 2
text = "Subdivide Offset X:"

[node name="SubdivideXOffset" type="SpinBox" parent="UI/Images/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 64.0
script = ExtResource("2_rd45n")

[node name="Label4" type="Label" parent="UI/Images/GridContainer"]
layout_mode = 2
text = "Subdivide Offset Y:"

[node name="SubdivideYOffset" type="SpinBox" parent="UI/Images/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 64.0
script = ExtResource("2_rd45n")

[node name="Control" type="Control" parent="UI/Images"]
layout_mode = 2
size_flags_vertical = 3

[node name="Cancel" type="Button" parent="UI/Images"]
layout_mode = 2
text = "Cancel"

[node name="Control2" type="Control" parent="UI/Images"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="CubePreview" parent="UI" instance=ExtResource("2_wwgxm")]
layout_mode = 2
